tests/sql_correctness/snapshots/query_aggregates__1.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT COUNT(*) FROM pgbench_accounts

+----------+
| count(*) |
+----------+
| 0        |
+----------+
