tests/sql_correctness/snapshots/query_aggregates__2.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT COUNT(*) FROM pgbench_branches

+----------+
| count(*) |
+----------+
| 0        |
+----------+
