tests/sql_correctness/snapshots/query_aggregates__3.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT COUNT(*) FROM pgbench_tellers

+----------+
| count(*) |
+----------+
| 0        |
+----------+
